--- a/project1/index.html
+++ b/project1/index.html
@@ -2,7 +2,22 @@
 <html>
   <head>
   </head>
-    <title></title>
+    <title>My first website</title>
   <body>
+    <a href="newpage.html">New Page</a>
+    <ol>
+      <li>banana</li>
+      <li>apple</li>
+      <ul>
+        <li>fuji</li>
+        <img src="https://5.imimg.com/data5/VB/IN/MY-40752636/fuji-apple-500x500.jpg" width="42" height="42">
+        <li>jonathan</li>
+        <img src="http://www.produceoasis.com/Uploads/jonathan-apple.jpg" width="42" height="42">
+        <ul>
+          <li>joe</li><hr>
+          <li>smith</li>
+        </ul>
+      </ul>
+    </ol>
   </body>
 </html>
