--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,8 @@
   </head>
     <title>My first website</title>
   <body>
-    <a href="newpage.html">New Page</a>
+    <a href="newpage.html">New Page</a><br>
+    <a href="register.html">Register</a>
     <ol>
       <li>banana</li>
       <li>apple</li>
