--- a/project1/register.html
+++ b/project1/register.html
@@ -4,18 +4,33 @@
     <title>Register</title>
   </head>
   <body>
-    <form>
-      First Name: <input type="text"><br>
-      Last Name: <input type="text"><br>
-      Email: <input type="email" required><br>
-      Birthday: <input type="date"><br>
+    <header>
+      <h1>Register></h1>
+    </header>
+    <nav>
+      <a href="www.google.com">Google</a>
+    </nav>
+    <footer>
+      <p>Website made with love</p>
+    </footer>
+    <form method="GET">
+      First Name: <input type="text" name="firstname"><br>
+      Last Name: <input type="text" name="lastname"><br>
+      Email: <input type="email" name="email" required><br>
+      Password: <input type="password" name="password" min="5"><br>
+      Birthday: <input type="date" name="birthday"><br>
       Gender: <br>
-      <input type="radio" name="gender">Male<br>
-      <input type="radio" name="gender">Female<br>
-      <input type="radio" name="gender">Other<br>
+      <input type="radio" name="gender" value="Male">Male<br>
+      <input type="radio" name="gender" value="Female">Female<br>
+      <input type="radio" name="gender" value="Other">Other<br>
       Pets: <br>
-      <input type="checkbox"> Cat<br>
-      <input type="checkbox"> Dog<br>
+      <input type="checkbox" name="cat"> Cat<br>
+      <input type="checkbox" name="dog"> Dog<br>
+      Cars: <br>
+      <select name="cars">
+        <option value="volvo" name="volvo">Volvo</option>
+        <option value="audi" name="audi">Audi</option>
+      </select><br>
       <input type="submit" value="Register"><br>
       <input type="reset">
     </form>
